--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ body{
   background: linear-gradient(135deg,#0d6efd,#20c997);
   padding:12px;
 }
-
 .container{
   max-width:420px;
   margin:auto;
@@ -20,38 +19,16 @@ body{
   border-radius:14px;
   box-shadow:0 6px 15px rgba(0,0,0,.2);
 }
-
 h2{text-align:center;color:#0d6efd;font-size:18px;}
 .subtitle{text-align:center;font-size:13px;margin-bottom:15px;}
-
-label{
-  font-weight:bold;
-  font-size:13px;
-}
-
+label{font-weight:bold;font-size:13px;}
 input,select,textarea,button{
-  width:100%;
-  padding:10px;
-  margin-top:5px;
-  margin-bottom:10px;
-  border-radius:8px;
-  border:1px solid #ccc;
-  font-size:14px;
+  width:100%;padding:10px;margin-top:5px;margin-bottom:10px;border-radius:8px;border:1px solid #ccc;font-size:14px;
 }
-
 textarea{resize:none;}
-
-button{
-  background:#0d6efd;
-  color:#fff;
-  border:none;
-  font-size:15px;
-  cursor:pointer;
-}
-
+button{background:#0d6efd;color:#fff;border:none;font-size:15px;cursor:pointer;}
 button.secondary{background:#6c757d;}
 button.danger{background:#dc3545;}
-
 .preview-card{
   background:#f8f9fa;
   border-radius:10px;
@@ -59,28 +36,14 @@ button.danger{background:#dc3545;}
   margin-bottom:10px;
   font-size:13px;
 }
-
-.preview-card p{
-  margin:4px 0;
-}
-
-.actions{
-  display:flex;
-  gap:6px;
-  margin-top:8px;
-}
-
-.actions button{
-  flex:1;
-  font-size:13px;
-}
+.preview-card p{margin:4px 0;}
+.actions{display:flex;gap:6px;margin-top:8px;}
+.actions button{flex:1;font-size:13px;}
 </style>
 </head>
 
 <body>
-
 <div class="container">
-
 <h2>LAAK MULTIPURPOSE COOPERATIVE</h2>
 <div class="subtitle">Leave Application Portal</div>
 
@@ -117,7 +80,7 @@ button.danger{background:#dc3545;}
 </select>
 
 <label>No. of Days</label>
-<input type="number" id="days" step="0.5" min="0.5">
+<input type="number" id="days" step="0.5" min="0.5" readonly>
 
 <label>Start Date</label>
 <input type="date" id="start">
@@ -129,7 +92,6 @@ button.danger{background:#dc3545;}
 <textarea id="reason" rows="2"></textarea>
 
 <button type="button" onclick="addRow()">ADD TO LIST</button>
-
 </form>
 
 <div id="previewBox" style="display:none;">
@@ -137,13 +99,25 @@ button.danger{background:#dc3545;}
   <div id="previewList"></div>
   <button onclick="submitAll()">SUBMIT ALL</button>
 </div>
-
 </div>
 
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycby2yS7h8Y6Lo-BGTfAWVy9Vlyq4-SpuRywDnIh7dxdLhoGaK1FZwKdJpnQN_xFxknBp/exec"; // your Apps Script URL
+const scriptURL = "https://script.google.com/macros/s/AKfycby2yS7h8Y6Lo-BGTfAWVy9Vlyq4-SpuRywDnIh7dxdLhoGaK1FZwKdJpnQN_xFxknBp/exec"; // Replace with Apps Script Web App URL
 let rows = [];
 let editIndex = null;
+
+function calculateDays() {
+  const start = document.getElementById("start").value;
+  const end = document.getElementById("end").value;
+  const daysInput = document.getElementById("days");
+  if(start && end){
+    const diff = (new Date(end) - new Date(start))/(1000*60*60*24) + 1;
+    daysInput.value = diff > 0 ? diff : 0;
+  } else { daysInput.value = ""; }
+}
+
+document.getElementById("start").addEventListener("change", calculateDays);
+document.getElementById("end").addEventListener("change", calculateDays);
 
 function addRow(){
   const row = {
@@ -156,29 +130,20 @@ function addRow(){
     end: document.getElementById("end").value,
     reason: document.getElementById("reason").value
   };
-
   if(Object.values(row).includes("")){
     alert("Complete all fields.");
     return;
   }
-
-  if(editIndex !== null){
-    rows[editIndex] = row;
-    editIndex = null;
-  } else {
-    rows.push(row);
-  }
-
-  leaveForm.reset();
-  renderPreview();
+  if(editIndex!==null){ rows[editIndex]=row; editIndex=null; } 
+  else { rows.push(row); }
+  leaveForm.reset(); document.getElementById("days").value=""; renderPreview();
 }
 
 function renderPreview(){
   const box = document.getElementById("previewList");
-  box.innerHTML = "";
-
+  box.innerHTML="";
   rows.forEach((r,i)=>{
-    box.innerHTML += `
+    box.innerHTML+=`
       <div class="preview-card">
         <p><b>Branch:</b> ${r.branch}</p>
         <p><b>ID:</b> ${r.empId}</p>
@@ -187,7 +152,6 @@ function renderPreview(){
         <p><b>Days:</b> ${r.days}</p>
         <p><b>${r.start}</b> to <b>${r.end}</b></p>
         <p><b>Reason:</b> ${r.reason}</p>
-
         <div class="actions">
           <button class="secondary" onclick="editRow(${i})">Edit</button>
           <button class="danger" onclick="deleteRow(${i})">Delete</button>
@@ -195,48 +159,34 @@ function renderPreview(){
       </div>
     `;
   });
-
-  document.getElementById("previewBox").style.display =
-    rows.length ? "block" : "none";
+  document.getElementById("previewBox").style.display = rows.length ? "block" : "none";
 }
 
 function editRow(i){
-  const r = rows[i];
-  document.getElementById("branch").value = r.branch;
-  document.getElementById("empId").value = r.empId;
-  document.getElementById("empName").value = r.name;
-  document.getElementById("leaveType").value = r.leaveType;
-  document.getElementById("days").value = r.days;
-  document.getElementById("start").value = r.start;
-  document.getElementById("end").value = r.end;
-  document.getElementById("reason").value = r.reason;
-  editIndex = i;
+  const r=rows[i];
+  document.getElementById("branch").value=r.branch;
+  document.getElementById("empId").value=r.empId;
+  document.getElementById("empName").value=r.name;
+  document.getElementById("leaveType").value=r.leaveType;
+  document.getElementById("days").value=r.days;
+  document.getElementById("start").value=r.start;
+  document.getElementById("end").value=r.end;
+  document.getElementById("reason").value=r.reason;
+  editIndex=i;
 }
 
-function deleteRow(i){
-  if(confirm("Delete this entry?")){
-    rows.splice(i,1);
-    renderPreview();
-  }
-}
+function deleteRow(i){ if(confirm("Delete this entry?")){ rows.splice(i,1); renderPreview(); } }
 
 function submitAll(){
   fetch(scriptURL,{
     method:"POST",
     body: JSON.stringify({records: rows}),
-    headers:{"Content-Type":"application/json"}
+    headers: {"Content-Type":"application/json"}
   })
   .then(res=>res.json())
-  .then(()=>{
-    alert("Leave requests submitted successfully!");
-    rows=[];
-    renderPreview();
-  })
+  .then(()=>{ alert("Leave requests submitted successfully!"); rows=[]; renderPreview(); })
   .catch(()=>alert("Submission failed."));
 }
 </script>
-
 </body>
 </html>
-
-
